@@ -2,7 +2,10 @@
   #welcome
     - if current_user
       Welcome,
-      = (current_user.first_name.blank? ? current_user.username : current_user.first_name.capitalize) << "! "
+      -# This span gets updated on the fly if user changes her name.
+      %span#welcome_username= @current_user.name
+      %span> !&nbsp;&nbsp;
+
       = link_to("Quick find", "#", :id => "jumper") << " | "
       = link_to("Profile", profile_path) << " | "
       = link_to("Logout", logout_path, :method => :delete)
